--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
     "svgo": "^1.0.5"
+  },
+  "bin": {
+    "iconsprite-creator": "./index.js"
   }
 }
